--- a/Pipfile
+++ b/Pipfile
@@ -4,10 +4,13 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
+
 flask = "2.2.2"
+werkzeug = "2.2.2"
 importlib-metadata = "6.0.0"
 importlib-resources = "5.10.0"
 ipdb = "0.13.9"
+pytest = "7.2.0"
 
 [requires]
 python_full_version = "3.8.13"
